<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/gradient"
    android:layout_height="match_parent"
    tools:context="com.example.bridginghealthcare.MainActivity">

    <EditText
        android:id="@+id/txtUser"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_below="@+id/imageView2"
        android:layout_alignStart="@+id/imageView2"
        android:layout_alignEnd="@+id/imageView2"
        android:layout_marginStart="-6dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_action_user"
        android:ems="10"
        android:hint="@string/txtUser"
        android:autofillHints="@string/Email"
        android:inputType="textPersonName"
        android:textColorHint="@color/grey"
        android:textColor="@color/grey"

        android:textSize="16sp" />

    <EditText
        android:id="@+id/txtSenha"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@+id/txtUser"
        android:layout_alignStart="@+id/txtUser"
        android:layout_alignEnd="@+id/txtUser"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="-1dp"
        android:background="#11000000"
        android:textColorHint="@color/grey"
        android:autofillHints="@string/txtPassword"
        android:textColor="@color/grey"
        android:drawableStart="@drawable/ic_action_pass"
        android:ems="10"
        android:hint="@string/txtPassword"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="161dp"
        android:layout_height="61dp"
        android:layout_below="@+id/txtSenha"
        android:layout_alignStart="@+id/txtSenha"
        android:layout_alignEnd="@+id/txtSenha"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="53dp"
        android:background="@drawable/buttonshape"
        android:text="@string/btnlogin"
        android:textColor="#B7BCC2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="315dp"
        android:layout_height="248dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="51dp"
        android:contentDescription="@string/imgView"
        app:srcCompat="@drawable/logo02" />

    <TextView
        android:id="@+id/lblCadastrar"
        android:layout_width="212dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:layout_alignStart="@+id/txtSenha"
        android:layout_alignEnd="@+id/txtSenha"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="7dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="4dp"
        android:text="@string/lblCadastrar"
        android:textAlignment="center"
        android:textColor="#B7BCC2"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/lblSenha"
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblCadastrar"
        android:layout_alignStart="@+id/lblCadastrar"
        android:layout_alignEnd="@+id/lblCadastrar"
        android:layout_marginStart="68dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="50dp"
        android:text="@string/lblSenha"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textSize="16sp" />
</RelativeLayout>
