<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/txtEmail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="com.example.bridginghealthcare.MainActivity">

    <EditText
        android:id="@+id/txtNomeCadastro"
        android:layout_width="319dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="@string/Nome"
        android:ems="10"
        android:hint="@string/Nome"
        android:inputType="textPersonName"
        android:textColor="@color/grey"
        android:textColorHint="@color/grey" />

    <EditText
        android:id="@+id/txtSobreNomeCadastro"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtNomeCadastro"
        android:layout_alignStart="@+id/txtNomeCadastro"
        android:layout_alignEnd="@+id/txtNomeCadastro"
        android:layout_marginStart="0dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="7dp"
        android:ems="10"
        android:textColorHint="@color/grey"
        android:textColor="@color/grey"
        android:hint="@string/Sobrenome"
        android:autofillHints="@string/Sobrenome"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtEmailCadastro"
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtSobreNomeCadastro"
        android:layout_alignStart="@+id/txtSobreNomeCadastro"
        android:layout_alignEnd="@+id/txtSobreNomeCadastro"
        android:layout_marginStart="2dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="-4dp"
        android:ems="10"
        android:textColorHint="@color/grey"
        android:textColor="@color/grey"
        android:hint="@string/txtUser"
        android:autofillHints="@string/txtUser"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/txtDataNascCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtEmailCadastro"
        android:layout_alignStart="@+id/txtEmailCadastro"
        android:layout_alignEnd="@+id/txtEmailCadastro"
        android:layout_marginStart="-3dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="103dp"
        android:ems="10"
        android:textColorHint="@color/grey"
        android:textColor="@color/grey"
        android:hint="@string/DataMasc"
        android:autofillHints="@string/DataMasc"
        android:inputType="date" />

    <EditText
        android:id="@+id/txtSenhaCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtDataNascCadastro"
        android:layout_alignStart="@+id/txtDataNascCadastro"
        android:layout_marginStart="0dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:textColorHint="@color/grey"
        android:textColor="@color/grey"
        android:hint="@string/Senha"
        android:autofillHints="@string/Senha"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/txtConfSenhaCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtSenhaCadastro"
        android:layout_alignStart="@+id/txtSenhaCadastro"
        android:layout_marginStart="2dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:textColorHint="@color/grey"
        android:textColor="@color/grey"
        android:hint="@string/ConfirmarSenha"
        android:autofillHints="@string/ConfirmarSenha"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnCriarConta"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtConfSenhaCadastro"
        android:layout_alignStart="@+id/txtConfSenhaCadastro"
        android:layout_marginStart="84dp"
        android:layout_marginTop="143dp"
        android:background="@drawable/buttonshape"
        android:text="Criar conta"
        android:textColor="@color/grey" />

    <CheckBox
        android:id="@+id/ckbTermos"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtConfSenhaCadastro"
        android:layout_alignStart="@+id/txtConfSenhaCadastro"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-8dp"
        android:layout_marginTop="79dp"
        android:text="Li e concordo com os termos de uso"
        android:textColor="@color/grey" />

    <RadioButton
        android:id="@+id/rbtnMas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txtConfSenhaCadastro"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-8dp"
        android:layout_marginBottom="231dp"
        android:text="Masculino"
        android:textColor="@color/grey" />

    <RadioButton
        android:id="@+id/rbtnFem"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/txtConfSenhaCadastro"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="-43dp"
        android:layout_marginBottom="229dp"
        android:layout_toEndOf="@+id/rbtnMas"
        android:text="Feminino"
        android:textColor="@color/grey" />
</RelativeLayout>